# fordead_package

./: .gitattributes  .gitignore  .gitlab-ci.yml  .zenodo.json  CHANGELOG.md  Dockerfile  LICENSE  README.md  README_fr.md  TODO.md  ToDo.md  create_final_timelapse.py  demo_pipeline.ipynb  environment-dev.yml  environment-doc.yml  environment.yml  environment_fixed_versions.yml  mkdocs.yml  pyproject.toml  pyproject_doc.toml  requirements.txt  run_pipeline_real_gee.py  setup.py  step1_compute_masked_vegetationindex.py  step2_train_model.py  step3_dieback_detection.py  step4_compute_forest_mask.py  step5_export_results.py  step6_create_timelapse.py  step7_create_graphs.py  step8_updating_detection.py  technical_test_setup.py
ci/: prepare_dinamis_sdk.py
docs/: 00_Intro_Objectifs.md  01_Prerequis_data_soft.md  02_pretraitement_classification.md  03_Formation_scolytes.md  Formation_scolytes.md  Installation.md  Tutorial.md  algo.md  cli.md  convert_links.py  gen_ref_pages_standalone.py  requirements.txt  style.css
examples/: 01_compute_forest_mask.py  DetectionFordead.py  TrainFordead.py  compute_forest_mask.py  compute_masked_vegetationindex.py  copy_validation_data.py  create_timelapse.py  ex_computing_masked_vegetation_index.py  ex_computing_vegetation_index.md  ex_dict_vi.txt  ex_preprocess_theia.py  ex_read_tileinfo.py  ex_tileinfo_object.md  process_tile.py  step1_compute_forest_mask.py  step1_compute_masked_vegetationindex.py  step2_TrainFordead.py  step2_compute_masked_vegetationindex.py  step3_DetectionFordead.py  step3_TrainFordead.py  step4_DetectionFordead.py  step4_compute_forest_mask.py  step5_export_results.py  style.css  tests_validation.py  validation.py  vi_series_visualisation.py
fordead/: DetectionDeperissement.py  ImportData.py  ImportData_v2.py  Lib_TrainFordead.py  Main_DetectionFordead.py  Main_DetectionFordead_v2.py  __init__.py  (+18 more)
fordead.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+967 files in other folders)
