[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "fordead"
dynamic = ["version"]
authors = [
  {name="Raphaël Dutrieux", email="raphael.dutrieux@inrae.fr"},
  {name="Kenji Ose", email="kenji.ose@inrae.fr"},
  {name="Florian de Boissieu", email="florian.deboissieu@inrae.fr"},
  {name="Jean-Baptiste Féret", email="jean-baptiste.feret@inrae.fr"},
]
description = "A python package for vegetation anomalies detection from SENTINEL-2 images."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "GPLv3"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    
    # Indicate who your project is intended for
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: GIS',
    'Topic :: Scientific/Engineering :: Information Analysis',

    # License
    'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
]
keywords=['Remote Sensing', 'Sentinel-2', 'S2', 'Forest', 'bark beetle',]
dependencies = [
  "click",
  "click-option-group",
  "dask",
  "dinamis-sdk",
  "eodag >= 3",
  "geopandas",
  "matplotlib",
  "numpy",
  "path >= 17",
  "pathlib",
  "planetary-computer",
  "plotly",
  "pystac",
  "rasterio",
  "rioxarray",
  "scipy",
  "stackstac",
  "xarray",
  "jsonschema",
  "referencing",

  # additionnal dependencies for stac-static
  "pygeofilter",
  "pyarrow",
  "stac-geoparquet>=0.3.2",
  "stac-static",
]

[project.urls]
Homepage = "https://fordead.gitlab.io/fordead_package"
Repository = "https://gitlab.com/fordead/fordead_package"
Issues = "https://gitlab.com/fordead/fordead_package/-/issues"

[tool.setuptools.packages.find]
include = [
    "fordead",
]

[project.scripts]
fordead = "fordead.steps.__main__:fordead"

